--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -1,18 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.bhavyasikka.trellsample.SampleActivity"
-    android:padding="10dp"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true">
 
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/recycleView"
+<android.support.design.widget.AppBarLayout
+    android:id="@+id/appBar"
+    android:layout_width="match_parent"
+    android:layout_height="300dp"
+    android:fitsSystemWindows="true"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+  <android.support.design.widget.CollapsingToolbarLayout
+      android:id="@+id/collapsingToolbar"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      >
+      android:fitsSystemWindows="true"
+      app:contentScrim="?attr/colorPrimary"
 
-  </android.support.v7.widget.RecyclerView>
+      app:layout_scrollFlags="scroll|exitUntilCollapsed"
+      app:title="TRELL!">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/toolbarImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/trell2"
+        app:layout_collapseMode="parallax" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_collapseMode="pin"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+
+  </android.support.design.widget.CollapsingToolbarLayout>
+</android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:padding="10dp"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recycleView2">
+
+        </android.support.v7.widget.RecyclerView>
+    </RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
+
+
+
+
+
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    tools:context="com.example.bhavyasikka.trellsample.SampleActivity"-->
+<!--    android:padding="10dp"-->
+<!--    android:orientation="vertical">-->
+
+<!--  <android.support.v7.widget.RecyclerView-->
+<!--      android:id="@+id/recycleView"-->
+<!--      android:layout_width="match_parent"-->
+<!--      android:layout_height="match_parent">-->
+<!--  </android.support.v7.widget.RecyclerView>-->
+<!--</LinearLayout>-->
