added flexbox lyout manager

--- a/app/src/main/res/layout/display_xml.xml
+++ b/app/src/main/res/layout/display_xml.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="10dp"
     android:id="@+id/card1"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="top"
     android:layout_weight="1">
 
-<HorizontalScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+<!--<HorizontalScrollView-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content">-->
 <LinearLayout
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:id="@+id/changeSizeLayout"
     android:background="#33cc5a"
@@ -26,7 +26,7 @@
     </ImageView>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/sample_text"
         tools:text="sample text"
@@ -34,6 +34,6 @@
     </TextView>
 
 </LinearLayout>
-</HorizontalScrollView>
+<!--</HorizontalScrollView>-->
 </android.support.v7.widget.CardView>
 
